Add a parent pom to allow to release the project with Maven and tune JVM options for android plugin - MOB-500