@@ -4,24 +4,15 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.exoplatform</groupId>
-		<artifactId>exo.parent</artifactId>
-		<version>8.1</version>
+                <groupId>org.exoplatform.mobile.platform</groupId>
+                <artifactId>exo-mobile</artifactId>
+                <version>2.0-Beta1-SNAPSHOT</version>
 	</parent>
-	<groupId>org.exoplatform.mobile.platform</groupId>
 	<artifactId>exo-mobile-android</artifactId>
-	<version>2.0-Beta1-SNAPSHOT</version>
 	<packaging>apk</packaging>
 	<name>eXo Mobile Android</name> 
 	<description>eXo Mobile Android projects.</description>
-	<scm>
-		<connection>scm:svn:https://svn.exoplatform.org/projects/mobile/trunk/exo-mobile-android</connection>
-		<developerConnection>scm:svn:https://svn.exoplatform.org/projects/mobile/trunk/exo-mobile-android</developerConnection>
-		<url>https://fisheye.exoplatform.org/browse/mobile/trunk/exo-mobile-android</url>
-	</scm>
 	<properties>
-		<!-- SNAPSHOTS must be deployed in our private repository -->
-		<exo.snapshots.repo.url>http://repository.exoplatform.org/content/repositories/exo-private-snapshots</exo.snapshots.repo.url>
 		<!-- Runtimes -->
 		<com.google.android.version>2.1.2</com.google.android.version>
 		<!-- Libraries -->
@@ -69,6 +60,12 @@
 				<artifactId>maven-android-plugin</artifactId>
 				<version>${maven-android-plugin.plugin-version}</version>
 				<configuration>
+                                        <jvmArguments>
+                                               <argument>-Xshare:auto</argument>
+                                               <argument>-Xms128M</argument>
+                                               <argument>-Xmx1G</argument>
+                                               <argument>-XX:MaxPermSize=256M</argument>
+                                        </jvmArguments>
 					<deleteConflictingFiles>true</deleteConflictingFiles>
 				</configuration> 
 				<extensions>true</extensions>
